fixed truncation on organiser listing page

--- a/src/styles/organizers-page.scss
+++ b/src/styles/organizers-page.scss
@@ -52,6 +52,7 @@ $photo-height: 100px;
   &-members {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
   }
 }
 
